Added incident information. Next up is property information
